# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: lint.yml  pyci.yml  test.yml  test_coverage.yml
gendiff/: __init__.py  diff_constructor.py  generate_diff.py  parse_file.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_gendiff.py  test_open_file.py
