[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pavel Vasilev <vasilievpg@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.generate_diff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
